pom nuevo
# Conflicts:
#	pom.xml
#	src/main/java/com/qaqc/automation/config/Capabilities.java
#	src/main/java/com/qaqc/automation/core/Automation.java